- Started working on the about us page.

+ 

- Finished a basic about us page.
- Made all function and class documentation under the Model folder up to standard.
- Made all function and class documentation under the Controller folder up to standard.
- All css is now in a single file to decrease amount of request being made loading it.
- Removed Footer since i had no use for it.

+

- Added a credit system
- Users currently gain 10 credits when making a post
- Credit is also shown on account page.
- Added icons to the account page

+ 

- Added icons to the login and register views
- Made the sidebar MVC
- Added a subjects, admin and home button to the sidebar.
- Changed Thoughtshare in the locationbar to home
- Sidebar now only shows the button the user has access to

+

- Created the mvc framework for the homepage and admin page.
- Started working inside the admin model and view.

+ 

- Admin page is done, admins can now delete primary and secondary subjects including posts and proposals if need be.
- Fixed background not fully covering the page
- Proposal creation dates now display years using 4 digits instead of 2
- Clicking the thoughtshare logo/name now links to the home page instead of the subjects page.
- Fixed "subjects" not showing in the locationBar for post, create post, primary sub and secondary subject pages.
- No post available no has the same appearance as the regular titles.

+

- Minor design changes
- Fixed content sometimes not loading
- Fixed login buttons sometimes not properely displaying
- Added a no open proposals available message

+

- Filled the homepage

+

- Page now starts with sidebar expanded 
- Site now starts on homepage.
- added a small delay to the logincheck to prevent login/out buttons not loading
- Minor design changes in sidebar.
- Added a footer to the sidebar

+

- Alert messages are now shown when deleting a primary or secondary subject
- Admin page is now properely refreshed when a primary or secondary subject is deleted.
