@@ -1,0 +1,3 @@
+RewriteEngine On 
+RewriteRule ^PHP/api/([0-9a-zA-Z_-]*)$ php/api.php [NC,L]
+RewriteRule ^PHP/api/user/([0-9a-zA-Z_-]*)$ php/api.php [NC,L]
